tests/ui/impl-trait/unsized_coercion5.next.stderr
error[E0308]: mismatched types
  --> $DIR/unsized_coercion5.rs:16:32
   |
LL |         let y: Box<dyn Send> = x as Box<dyn Trait + Send>;
   |                -------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected trait `Send`, found trait `Trait + Send`
   |                |
   |                expected due to this
   |
   = note: expected struct `Box<dyn Send>`
              found struct `Box<dyn Trait + Send>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
